# quantum-katas

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  PRD.md  README.md
.claude/: CLAUDE.md  settings.json  startup.sh
.claude/scripts/: post-lint.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/src/quantum_katas/: __init__.py  main.py
backend/src/quantum_katas/data/: __init__.py
backend/src/quantum_katas/data/katas/: 01_single_qubit.yaml  02_pauli_x_gate.yaml  03_hadamard_gate.yaml  04_measurement_statistics.yaml  05_pauli_z_gate.yaml  06_multi_qubit.yaml  07_cnot_gate.yaml  08_bell_state.yaml  09_quantum_teleportation.yaml  10_deutsch_jozsa.yaml
backend/src/quantum_katas/models/: execution.py  kata.py
backend/src/quantum_katas/routers/: execute.py  katas.py
backend/src/quantum_katas/services/: executor.py  judge.py  kata_registry.py  rate_limiter.py
backend/tests/: conftest.py  test_executor.py  test_health.py  test_judge.py  test_kata_model.py  test_katas_api.py  test_rate_limit.py
docs/: HARVEST.md  screens.md  use-cases.md
docs/adr/: 001-code-execution-sandbox.md
frontend/: biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/components/: CodeEditor.test.tsx  CodeEditor.tsx  ExecutionResult.test.tsx  ExecutionResult.tsx  HintPanel.test.tsx  HintPanel.tsx  KataDetail.test.tsx  KataDetail.tsx  KataList.test.tsx  KataList.tsx  ProgressBar.tsx
frontend/src/hooks/: useExecution.ts  useKatas.ts  useProgress.test.ts  useProgress.ts
frontend/src/lib/: api.test.ts  api.ts  constants.ts  mock-data.ts
frontend/src/types/: execution.ts  kata.ts
